--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-calendar": "^4.0.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-textfit": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
