--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "miniproyecto",
+  "homepage": "https://roquepulido.github.io/miniProyectoN3/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +9,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
